# PBC-chaos-injection

./: .gitignore  README.md  buidprompt.md  config_loader.py  pyproject.toml
config/: clean.yaml  default.yaml  nightmare.yaml  unreproducible-nightmare.yaml
configs/: default.yaml  severity-high.yaml  severity-low.yaml
docs/: architecture.md  chaos-framework.md  chaos-severity-config.md  finance-report-shape-upgrade.md  frontend-chaos-spreadsheet-framework.md  ground-truth-metadata.md  implementation-roadmap.md  normalized-schemas.md  pbc-request-list-chaos-tasks.md  visible-export-schema-upgrade.md
examples/: cli-usage.md  demo_financial_generators.py  demo_layout_chaos.py
src/pbc_chaos/: __init__.py  cli.py  config_loader.py  env.py  pbc_workbook.py
src/pbc_chaos/batch/: __init__.py  pipeline.py
src/pbc_chaos/chaos/: __init__.py  base.py  context.py  data_quality.py  default_registry.py  engine.py  events.py  factory.py  file_naming.py  formatting.py  formula.py  human_residue.py  (+7 more)
src/pbc_chaos_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_architecture_contracts.py  test_batch_cli.py  test_chaos_framework.py  test_config_loader.py  test_financial_generators.py  test_ground_truth_metadata.py  test_layout_engine.py  test_pbc_request_list_chaos.py  test_reconciliation.py  test_report_archetypes.py  test_scoring_framework.py  test_unreproducible_nightmare.py  test_visible_schema.py  test_web_runner.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  styles.css
(+73 files in other folders)
