[project]
name = "pbc-chaos-simulator"
version = "0.1.0"
description = "Synthetic enterprise audit PBC workbook generator architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faker>=25.0",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
pbc-chaos = "pbc_chaos.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

